# jobone

./: .pre-commit-config.yaml  Agent_Orchestrator.py  Agent_Telemetry_Injector.py  ConfigManager.py  Database_Manager.py  Environment_Monitoring_Agent.py  Error_Mitigation_Agent.py  External_API.py  Log_Manager.py  Streamlit_App.py  Time_Based_Execution_Engine.py  continue.config.json  fix_bark.py  move_orion_files.bat  move_orion_files.py  orion.db  orion_master_plan.md  orion_master_plan_degerlendirme.md  orion_teknik_rapor.md  pyproject.toml  takip  teknik_rapor_bolumleri.md  test_bark.py  test_config_manager.py  test_quick.py
archive/: orion_detayli_master_plan.md  orion_gelistirme_master_plan.md
config/: llm_config.json  persona.json
manager/: pasted_content.txt
orion_vision_core/: requirements.txt  run_orion.py  runner_service.py
orion_vision_core/agents/: llm_router.py  memory.py  mouse_control.py  orion_brain.py  screen_agent.py  speech_agent.py  voice_agent.py
orion_vision_core/core/: __init__.py  base_agent.py  config.py  exceptions.py  logging.py
orion_vision_core/memory/: orion_memory_v2.json
src/aura_core/modules/CognitiveAgentModule/: Query_Optimization_Agent.py
src/aura_core/modules/DataManagementModule/: Database_Manager.py
src/aura_core/modules/LLMIntegrationModule/: llm_router.py
src/aura_core/modules/UserInterfaceModule/: Streamlit_App.py  screen_agent.py
tests/: __init__.py  conftest.py  test_memory_agent.py
yonetim/: kyplan.md  orion_detayli_master_plan.markdown  orion_detayli_plan.md  orion_gelistirme_master_plan.markdown
